--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patrick Oluoch | Developer portfolio </title>
+    <link rel="stylesheet" href="style.css">
+
+    <style>
+        .text-yellow{
+            color: #F2DC12;
+        }
+    </style>
 </head>
-<body>
+<body class="bg-black">
+    <div class="flex justify-end mr-2">
+        <h1 class="text-yellow text-2xl">CONTACT</h1>
+    </div>
+    <div class="flex flex-col items-start pl-2">
+        <h1 class="text-white text-2xl">Hi, I am Patrick Oluoch</h1>
+        <h1 class="text-gray-500">A computer science graduate at Multimedia university of Kenya</h1>
+    </div>
+
     
 </body>
 </html>
