Done homepage prototype

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <div class="flex justify-end mr-2">
         <h1 class="text-yellow text-2xl">CONTACT</h1>
     </div>
-    <div class="flex flex-col items-start pl-2">
+    <div class="flex flex-col items-start pl-2 mt-5">
         <h1 class="text-white text-2xl">Hi, I am Patrick Oluoch</h1>
-        <h1 class="text-gray-500">A computer science graduate at Multimedia university of Kenya</h1>
+        <h1 class="text-gray-500 text-lg mt-2">A computer science graduate at Multimedia university of Kenya</h1>
+        <h1 class="text-white m-auto mt-5 animate-bounce" >scroll icon</h1>
     </div>
 
     
