add documentation to index.html

--- a/index.html
+++ b/index.html
@@ -14,14 +14,47 @@
     </style>
 </head>
 <body class="bg-black">
+    <!-- start of navabar and hero page -->
     <div class="flex justify-end mr-2">
-        <h1 class="text-yellow text-2xl">CONTACT</h1>
+        <h1 class="text-yellow text-xl mt-2">CONTACT</h1>
     </div>
     <div class="flex flex-col items-start pl-2 mt-5">
         <h1 class="text-white text-2xl">Hi, I am Patrick Oluoch</h1>
-        <h1 class="text-gray-500 text-lg mt-2">A computer science graduate at Multimedia university of Kenya</h1>
-        <h1 class="text-white m-auto mt-5 animate-bounce" >scroll icon</h1>
+        <h1 class="text-gray-500 text-lg mt-2 leading-normal">Computer Science graduate at Multimedia University of Kenya.</h1>
+        <h1 class="text-yellow m-auto mt-5 animate-bounce" >scroll icon</h1>
     </div>
+    <!-- End of Navabar and Hero section -->
+
+    <!-- Start of Skills section -->
+    <div class="flex flex-col justify-center pl-2">
+        <div class="flex flex-col items-start">
+            <h1 class="text-white text-lg">Full Stack Web Developer</h1>
+            <p class="text-gray-500">I develop cross platform applications using trendy and 
+                modern technologies to generate more revenue for your
+                business</p>
+            <div class="text-gray-500 mt-1">
+                <h1 class="inline text-yellow text-sm">TOOLS:</h1>
+                <h1 class="inline ml-2 text-sm ">TAILWIND, BOOTSTRAP,REACT JS,DJANGO,MYSQL</h1>
+                <h1 class="text-right text-yellow">HIRE ME</h1>
+            </div>
+            
+        </div>
+        <div class="mt-2">
+            <h1 class="text-white text-lg">UI/UX And Graphics Design</h1>
+            <p class="text-gray-500">I design intuitive user interfaces for both mobile and
+                web applications.</p>
+                <p class="text-gray-500">I also design business cards and flyers for businesses</p>
+                <div class="text-gray-500 mt-1">
+                    <h1 class="inline text-yellow text-sm">TOOLS:</h1>
+                    <h1 class="inline ml-2 text-sm ">TAILWIND, BOOTSTRAP,REACT JS,DJANGO,MYSQL</h1>
+                    <h1 class="text-right text-yellow">HIRE ME</h1>
+                </div>
+        </div>
+    </div>
+    <!-- End of Skills section -->
+
+    <!-- Start of Recent Works section -->
+
 
     
 </body>
