--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
 
     <!-- End of Recent works section -->
 
+    <!-- start of motivation section -->
+    <div class="flex flex-col justify-start mt-5 pl-8 pr-2">
+        <h1 class="text-white text-lg ">As a developer or any professional you need a digital portfolio,
+            its a digital way of proving that you are fit for
+            a role.</h1>
+            <p class="text-white text-right pr-2 mb-2 text-lg">Get yours at only <span class="text-yellow text-2xl">$49</span></p>
+    </div>
+
+
+    <!-- End of motivation section -->
+
 
     
 </body>
