--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         .text-yellow{
             color: #F2DC12;
         }
+
+        .bg-yellow{
+            background-color: #F2DC12;
+        }
+
+        .border-yellow{
+            border-color: #F2DC12;
+        }
     </style>
 </head>
 <body class="bg-black">
@@ -84,10 +92,40 @@
             a role.</h1>
             <p class="text-white text-right pr-2 mb-2 text-lg">Get yours at only <span class="text-yellow text-2xl">$49</span></p>
     </div>
-
-
     <!-- End of motivation section -->
 
+    <!-- Start of contact me section -->
+    <form class="flex flex-col justify-start mx-2 p-2">
+        <h1 class="text-yellow text-lg mt-5">Contact Me</h1>
+        <p class="text-gray-500 text-sm">I cant wait to say Hi to you</p>
+        <input type="email" name="email" id="email" placeholder="Enter email address" class="border border-yellow bg-black rounded pl-2 h-10 my-2">
+        <input type="text" name="subject" id="subject" placeholder="Enter subject" class="border border-yellow bg-black rounded pl-2 h-10 mb-2">
+        <textarea name="message" id="message" cols="30" rows="10" class="border border-yellow bg-black rounded pl-2 h-30 " placeholder="Enter message here"></textarea>
+        <button type="submit" class="bg-yellow text-black my-2 h-10">SEND MESSAGE</button>
+
+    </form>
+    <!-- End of contact me section -->
+
+    <!-- Start of a footer section -->
+    <div class="flex flex-col items-center mt-5">
+        <div class="flex flex-row justify-between">
+            <!-- here contains the social icons -->
+            <h1 class="text-white mr-1">gh</h1>
+            <h1 class="text-white mr-1">rg</h1>
+            <h1 class="text-white mr-1">md</h1>
+            <h1 class="text-white mr-1">dr</h1>
+            <h1 class="text-white mr-1">bh</h1>
+            <h1 class="text-white mr-1">tw</h1>
+            <h1 class="text-white mr-1">fb</h1>
+        </div>
+        <div class="my-2">
+            <h1 class="text-gray-500 hover:text-white inline">icon</h1>
+            <h1 class="text-gray-500 hover:text-white text-xl  inline">
+                +254769 869 064
+            </h1>
+        </div>
+        <h1 class="text-lg text-gray-500">All Rights Reserved 2022</h1>
+    </div>
 
     
 </body>
