add margin bottom on footer to prevent overflow

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <!-- End of contact me section -->
 
     <!-- Start of a footer section -->
-    <div class="flex flex-col items-center mt-5">
+    <div class="flex flex-col items-center mt-5 mb-10">
         <div class="flex flex-row justify-between">
             <!-- here contains the social icons -->
             <h1 class="text-white mr-1">gh</h1>
