--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
     <!-- Start of Recent Works section -->
     <div class="flex flex-col mt-5">
-        <h1 class="text-yellow text-lg">Recent Works</h1>
-        <p class="text-sm text-gray-500 mb-1">Some of my previously completed works</p>
+        <h1 class="text-yellow text-lg ml-2">Recent Works</h1>
+        <p class="text-sm text-gray-500 mb-1 ml-2">Some of my previously completed works</p>
         <div class="flex flex-row flex-nowrap space-x-2">
             <div class="rounded bg-gray-500 p-2 h-64 w-1/2">
                 <img src="" alt="omuga tvc website " class="w-full h-1/2">
