--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         .border-yellow{
             border-color: #F2DC12;
         }
+        *{
+            scroll-behavior: smooth;
+        }
     </style>
 </head>
 <body class="bg-black">
@@ -34,7 +37,7 @@
     <!-- End of Navabar and Hero section -->
 
     <!-- Start of Skills section -->
-    <div class="flex flex-col justify-center pl-2">
+    <div class="flex flex-col justify-center pl-2" id="#home">
         <div class="flex flex-col items-start">
             <h1 class="text-white text-lg">Full Stack Web Developer</h1>
             <p class="text-gray-500">I develop cross platform applications using trendy and 
@@ -122,6 +125,19 @@
         </div>
         <h1 class="text-lg text-gray-500">All Rights Reserved 2022</h1>
     </div>
+
+    <!-- up navigation icon -->
+    <div class="flex justify-end relative">
+    <div class="bg-white h-16 w-16 rounded rounded-full  -mt-64 mr-5 z-10 absolute fixed animate-bounce">
+        <a href="index.html#home"><h1 class="text-black text-center ">nav <br>icon</h1></a>
+    </div>
+    </div>
+
+    <!-- Add icons -->
+    <!-- add animations on scroll -->
+    <!-- make contact form send message -->
+    <!-- host -->
+    <!-- more changes -->
   
 </body>
 </html>
