add bar before motivation

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 <body class="bg-black">
     <!-- start of navabar and hero page -->
     <div class="flex justify-end mr-2">
-        <h1 class="text-yellow text-xl mt-2">CONTACT</h1>
+        <h1 class="text-yellow text-xl mt-2 ">Contact_</h1>
     </div>
     <div class="flex flex-col items-start pl-2 mt-5">
-        <h1 class="text-white text-2xl">Hi, I am Patrick Oluoch</h1>
+        <h1 class="text-white text-2xl">Hi, I am Patrick Oluoch<span class="text-yellow text-4xl">.</span></h1>
         <h1 class="text-gray-500 text-lg mt-2 leading-normal">Computer Science graduate at Multimedia University of Kenya.</h1>
         <h1 class="text-yellow m-auto mt-5 animate-bounce" >scroll icon</h1>
     </div>
     <!-- End of Navabar and Hero section -->
 
     <!-- Start of Skills section -->
-    <div class="flex flex-col justify-center pl-2" id="#home">
+    <div class="flex flex-col justify-center pl-2 mt-5" id="#home">
         <div class="flex flex-col items-start">
             <h1 class="text-white text-lg">Full Stack Web Developer</h1>
             <p class="text-gray-500">I develop cross platform applications using trendy and 
@@ -67,18 +67,20 @@
     <!-- Start of Recent Works section -->
     <div class="flex flex-col mt-5">
         <h1 class="text-yellow text-lg ml-2">Recent Works</h1>
-        <p class="text-sm text-gray-500 mb-1 ml-2">Some of my previously completed works</p>
+        <p class="text-sm text-gray-500 mb-1 ml-2">Browse through some of my recently completed works</p>
         <div class="flex flex-row flex-nowrap space-x-2">
-            <div class="rounded bg-gray-500 p-2 h-64 w-1/2">
+            <div class="rounded bg-gray-500 p-2 h-64 w-1/2 overflow-clip">
                 <img src="" alt="omuga tvc website " class="w-full h-1/2">
-                <h1 class="text-white">Omuga TVC Website</h1>
-                <p class="text-gray-400 leading-none my-1">This is a website of technical
-                    and vocational college</p>
-                    <p class="capitalize text-black">Visit website</p>
+                <h1 class="text-white text-lg">Omuga TVC Website</h1>
+                <p class="text-gray-300 leading-none my-1 text-sm">A website I developed for a technical
+                    and vocational college that was just starting up.</p>
+                    <p class="capitalize text-white text-sm">Visit website</p>
             </div>
-            <div class="rounded bg-gray-500 p-2 h-auto w-1/2">
+            <div class="rounded bg-gray-500 p-2 h-auto w-1/2 overflow-clip">
                 <img src="" alt="omuga tvc website " class="w-full h-1/2">
-                <h1 class="text-white">hello world</h1>
+                <h1 class="text-white text-lg">Advanced CSS Book</h1>
+                <p class="text-gray-300 leading-none my-1 text-sm">A book I wrote about advanced topics on CSS available on Gumroad.</p>
+                    <p class="capitalize text-white mt-4 text-sm">Download it here</p>
                 
             </div>
         </div>
@@ -87,11 +89,13 @@
 
     <!-- start of motivation section -->
     <div class="flex flex-col justify-start mt-5 pl-8 pr-2">
-        <h1 class="text-white text-lg ">As a developer or any professional you need a digital portfolio,
+        <h1 class="text-white text-lg leading-tight">As a developer or any professional you need a digital portfolio,
             its a digital way of proving that you are fit for
             a role.</h1>
-            <p class="text-white text-right pr-2 mb-2 text-lg">Get yours at only <span class="text-yellow text-2xl">$49</span></p>
-    </div>
+
+            <div class="w-24 bg-yellow inline absolute ml-12" style="height: 2px; margin-top: 5.4em;"></div>
+            <p class="text-white text-right pr-2 mb-2 text-lg inline">Get yours at only <span class="text-yellow text-2xl">$49</span><sup> 00</sup></p>
+    </div>m
     <!-- End of motivation section -->
 
     <!-- Start of contact me section -->
