--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patrick Oluoch | Developer portfolio </title>
+    <title>Patrick Oluoch | Developer portfolio | +254 69869064 | 0769869064 | oluochp6@gmail.com</title>
     <link rel="stylesheet" href="style.css">
 
     <style>
@@ -39,6 +39,8 @@
     <!-- Start of Skills section -->
     <div class="flex flex-col justify-center pl-2 mt-5" id="#home">
         <div class="flex flex-col items-start">
+            <h1 class="text-yellow text-lg font-medium">Skillset and Passion</h1>
+            <!-- <P class="text-gray-500">The following are a few of my outstanding skills.</P> -->
             <h1 class="text-white text-lg">Full Stack Web Developer</h1>
             <p class="text-gray-500">I develop cross platform applications using trendy and 
                 modern technologies to generate more revenue for your
@@ -61,12 +63,33 @@
                     <h1 class="text-right text-yellow">HIRE ME</h1>
                 </div>
         </div>
+        <div class="mt-2">
+            <h1 class="text-white text-lg">Programming Tutor & Mentor</h1>
+            <p class="text-gray-500">On part time basis I share knowledge and mentor future professionals 
+                in the field of programming.</p>
+                <p class="text-gray-500">I teach the following programming languages</p>
+                <div class="text-gray-500 mt-1">
+                    <h1 class="inline text-yellow text-sm">LANGUAGES:</h1>
+                    <h1 class="inline ml-2 text-sm ">WEB DEVELOPMENT(TAILWIND/BOOTSTRAP), REACT JS, OOP(C++), DJANGO(PYTHON)</h1>
+                    <h1 class="text-right text-yellow">HIRE ME</h1>
+                </div>
+        </div>
+        <div class="mt-2">
+            <h1 class="text-white text-lg ">Researcher and Tech Writer</h1>
+            <p class="text-gray-500">The passion to know beyond and share broadly drives me to perform and 
+                publish research papers and tech articles on Reasearch gate and Medium respectively.</p>
+                <div class="text-gray-500 mt-1">
+                    <h1 class="inline text-yellow text-sm">PLATFORMS:</h1>
+                    <h1 class="inline ml-2 text-sm ">MEDIUM, RESEARCH GATE</h1>
+                    <h1 class="text-right text-yellow">HIRE ME</h1>
+                </div>
+        </div>
     </div>
     <!-- End of Skills section -->
 
     <!-- Start of Recent Works section -->
     <div class="flex flex-col mt-5">
-        <h1 class="text-yellow text-lg ml-2">Recent Works</h1>
+        <h1 class="text-yellow text-lg ml-2 font-medium">Recent Works</h1>
         <p class="text-sm text-gray-500 mb-1 ml-2">Browse through some of my recently completed works</p>
         <div class="flex flex-row flex-nowrap space-x-2">
             <div class="rounded bg-gray-500 p-2 h-64 w-1/2 overflow-clip">
@@ -100,7 +123,7 @@
 
     <!-- Start of contact me section -->
     <form class="flex flex-col justify-start mx-2 p-2">
-        <h1 class="text-yellow text-lg mt-5">Contact Me</h1>
+        <h1 class="text-yellow text-lg mt-5 font-medium">Contact Me</h1>
         <p class="text-gray-500 text-sm">I cant wait to say Hi to you</p>
         <input type="email" name="email" id="email" placeholder="Enter email address" class="border border-yellow bg-black rounded pl-2 h-10 my-2">
         <input type="text" name="subject" id="subject" placeholder="Enter subject" class="border border-yellow bg-black rounded pl-2 h-10 mb-2">
