add interested in section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Start of Skills section -->
     <div class="flex flex-col justify-center pl-2 mt-5" id="#home">
         <div class="flex flex-col items-start">
-            <h1 class="text-yellow text-lg font-medium">Skillset and Passion</h1>
+            <h1 class="text-yellow text-xl font-medium">Skillset and Passion</h1>
             <!-- <P class="text-gray-500">The following are a few of my outstanding skills.</P> -->
             <h1 class="text-white text-lg">Full Stack Web Developer</h1>
             <p class="text-gray-500">I develop cross platform applications using trendy and 
@@ -89,7 +89,7 @@
 
     <!-- Start of Recent Works section -->
     <div class="flex flex-col mt-5">
-        <h1 class="text-yellow text-lg ml-2 font-medium">Recent Works</h1>
+        <h1 class="text-yellow text-xl ml-2 font-medium">Recent Works</h1>
         <p class="text-sm text-gray-500 mb-1 ml-2">Browse through some of my recently completed works</p>
         <div class="flex flex-row flex-nowrap space-x-2">
             <div class="rounded bg-gray-500 p-2 h-64 w-1/2 overflow-clip">
@@ -116,14 +116,21 @@
             its a digital way of proving that you are fit for
             a role.</h1>
 
-            <div class="w-24 bg-yellow inline absolute ml-12" style="height: 2px; margin-top: 5.4em;"></div>
+            <div class="w-16 bg-yellow inline absolute ml-20 " style="height: 2px; margin-top: 5.4em;"></div>
             <p class="text-white text-right pr-2 mb-2 text-lg inline">Get yours at only <span class="text-yellow text-2xl">$49</span><sup> 00</sup></p>
     </div>m
     <!-- End of motivation section -->
 
+    <div class="flex flex-row justify-around flex-wrap px-2">
+        <h1 class="text-yellow text-lg">Interested In</h1>
+        <h1 class="text-black bg-yellow p-1 text-sm border-none">STARTUPS</h1>
+        <h1 class="text-black bg-yellow p-1 text-sm border-none">SOFTWARE ENGINEERING</h1>
+        
+    </div>
+
     <!-- Start of contact me section -->
     <form class="flex flex-col justify-start mx-2 p-2">
-        <h1 class="text-yellow text-lg mt-5 font-medium">Contact Me</h1>
+        <h1 class="text-yellow text-xl mt-5 font-medium">Contact Me</h1>
         <p class="text-gray-500 text-sm">I cant wait to say Hi to you</p>
         <input type="email" name="email" id="email" placeholder="Enter email address" class="border border-yellow bg-black rounded pl-2 h-10 my-2">
         <input type="text" name="subject" id="subject" placeholder="Enter subject" class="border border-yellow bg-black rounded pl-2 h-10 mb-2">
