remove bar in motivation

--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
 
     <!-- start of motivation section -->
     <div class="flex flex-col justify-start mt-5 pl-8 pr-2">
-        <h1 class="text-white text-lg leading-tight">As a developer or any professional you need a digital portfolio,
+        <h1 class="text-white text-lg leading-normal tracking-normal">As a developer or any professional you need a digital portfolio,
             its a digital way of proving that you are fit for
             a role.</h1>
 
-            <div class="w-16 bg-yellow inline absolute ml-20 " style="height: 2px; margin-top: 5.4em;"></div>
-            <p class="text-white text-right pr-2 mb-2 text-lg inline">Get yours at only <span class="text-yellow text-2xl">$49</span><sup> 00</sup></p>
+            <!-- <div class="w-16 bg-yellow inline absolute ml-20 " style="height: 2px; margin-top: 5.4em;"></div> -->
+            <p class="text-white text-right pr-2 mb-2 text-lg inline">Get yours at only <span class="text-yellow text-2xl">$49</span><sup class="text-yellow"> 00</sup></p>
     </div>m
     <!-- End of motivation section -->
 
     <div class="flex flex-row justify-around flex-wrap px-2">
-        <h1 class="text-yellow text-lg">Interested In</h1>
+        <h1 class="text-white text-lg">Interested In</h1>
         <h1 class="text-black bg-yellow p-1 text-sm border-none">STARTUPS</h1>
         <h1 class="text-black bg-yellow p-1 text-sm border-none">SOFTWARE ENGINEERING</h1>
         
