--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patrick Oluoch | Developer portfolio | +254 69869064 | 0769869064 | oluochp6@gmail.com</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0\css\font-awesome.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
     <style>
         .text-yellow{
@@ -142,18 +144,18 @@
 
     <!-- Start of a footer section -->
     <div class="flex flex-col items-center mt-5 ">
-        <div class="flex flex-row justify-between">
+        <div class="flex flex-row justify-between space-x-2">
             <!-- here contains the social icons -->
-            <h1 class="text-white mr-1">gh</h1>
-            <h1 class="text-white mr-1">rg</h1>
-            <h1 class="text-white mr-1">md</h1>
-            <h1 class="text-white mr-1">dr</h1>
-            <h1 class="text-white mr-1">bh</h1>
-            <h1 class="text-white mr-1">tw</h1>
-            <h1 class="text-white mr-1">fb</h1>
+            <i class="fa-brands fa-github text-white"></i>
+            <i class="fa-brands fa-researchgate text-white"></i>
+            <i class="fa-brands fa-medium text-white"></i>
+            <i class="fa-brands fa-dribbble text-white"></i>
+            <i class="fa-brands fa-behance text-white"></i>
+            <i class="fa-brands fa-twitter text-white"></i>
+            <i class="fa-brands fa-facebook text-white"></i>
         </div>
         <div class="my-2">
-            <h1 class="text-gray-500 hover:text-white inline">icon</h1>
+            <i class="fa-solid fa-phone text-gray-500 hover:text-white inline"></i>
             <h1 class="text-gray-500 hover:text-white text-xl  inline">
                 +254769 869 064
             </h1>
