add icons --index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="flex flex-col items-start pl-2 mt-5">
         <h1 class="text-white text-2xl">Hi, I am Patrick Oluoch<span class="text-yellow text-4xl">.</span></h1>
         <h1 class="text-gray-500 text-lg mt-2 leading-normal">Computer Science graduate at Multimedia University of Kenya.</h1>
-        <h1 class="text-black rounded rounded-full h-10 w-10 bg-yellow m-auto mt-5 animate-bounce text-sm text-center pt-2" >scroll</h1>
+        <h1 class="text-black rounded rounded-full h-10 w-10 bg-yellow m-auto mt-5 animate-bounce text-sm text-center pt-2" ><i class="fa-solid fa-arrow-down"></i></h1>
     </div>
     <!-- End of Navabar and Hero section -->
 
@@ -51,7 +51,7 @@
             <div class="text-gray-500 mt-1">
                 <h1 class="inline text-yellow text-sm">TOOLS:</h1>
                 <h1 class="inline ml-2 text-sm ">TAILWIND, BOOTSTRAP,REACT JS,DJANGO,MYSQL</h1>
-                <h1 class="text-right text-yellow">HIRE ME</h1>
+                <h1 class="text-right text-yellow">HIRE ME<i class="fa-solid fa-arrow-right-long text-yellow inline ml-2"></i></h1>
             </div>
             
         </div>
@@ -63,7 +63,7 @@
                 <div class="text-gray-500 mt-1">
                     <h1 class="inline text-yellow text-sm">TOOLS:</h1>
                     <h1 class="inline ml-2 text-sm ">ADOBE PHOTOSHOP, ADOBE XD</h1>
-                    <h1 class="text-right text-yellow">HIRE ME</h1>
+                    <h1 class="text-right text-yellow">HIRE ME<i class="fa-solid fa-arrow-right-long text-yellow inline ml-2"></i></h1>
                 </div>
         </div>
         <div class="mt-2 pr-2">
@@ -74,7 +74,7 @@
                 <div class="text-gray-500 mt-1">
                     <h1 class="inline text-yellow text-sm">LANGUAGES:</h1>
                     <h1 class="inline ml-2 text-sm ">WEB DEVELOPMENT(TAILWIND/BOOTSTRAP), REACT JS, OOP(C++), DJANGO(PYTHON)</h1>
-                    <h1 class="text-right text-yellow">HIRE ME</h1>
+                    <h1 class="text-right text-yellow">HIRE ME<i class="fa-solid fa-arrow-right-long text-yellow inline ml-2"></i></h1>
                 </div>
         </div>
         <div class="mt-2 pr-2">
@@ -84,7 +84,8 @@
                 <div class="text-gray-500 mt-1">
                     <h1 class="inline text-yellow text-sm">PLATFORMS:</h1>
                     <h1 class="inline ml-2 text-sm ">MEDIUM, RESEARCH GATE</h1>
-                    <h1 class="text-right text-yellow">HIRE ME</h1>
+                    <h1 class="text-right text-yellow">HIRE ME<i class="fa-solid fa-arrow-right-long text-yellow inline ml-2"></i></h1>
+                    
                 </div>
         </div>
     </div>
@@ -165,8 +166,8 @@
 
     <!-- up navigation icon -->
     <div class="flex justify-end relative">
-    <div class="bg-yellow h-14 w-14 rounded rounded-full  -mt-64 mr-5 z-10 absolute fixed animate-bounce">
-        <a href="index.html#home"><h1 class="text-black text-center text-sm mt-1">nav <br>icon</h1></a>
+    <div class="bg-yellow h-12 w-12 rounded rounded-full  -mt-64 pt-2 pl-4 mr-5  z-10 absolute fixed animate-bounce">
+        <a href="index.html#home"><i class="fa-solid fa-arrow-up  text-center h-4 w-4"></i></a>
     </div>
     </div>
 
