--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     
 
     <!-- Start of a footer section -->
-    <div class="flex flex-col items-center mt-5 footer">
+    <div class="flex flex-col items-center mt-5 ">
       <div class="flex flex-row justify-between space-x-2 media-icons">
         <!-- here contains the social icons -->
         <i class="fa-brands fa-github text-white"></i>
