--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
     <!-- Start of a footer section -->
     <div class="flex flex-col items-center mt-5 ">
-      <div class="flex flex-row justify-between space-x-2 media-icons">
+      <div class="flex flex-row justify-between space-x-2 ">
         <!-- here contains the social icons -->
         <i class="fa-brands fa-github text-white"></i>
         <i class="fa-brands fa-researchgate text-white"></i>
