--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
             border-color: #f2dc12;
         }
 
-        * {
-            scroll-behavior: smooth;
-        }
+        
     </style>
 </head>
 
@@ -196,7 +194,7 @@
         <textarea name="message" id="message" cols="30" rows="10"
             class="border border-yellow bg-black rounded pl-2 h-30 text-gray-500 contact-input"
             placeholder="Enter message here"></textarea>
-        <button type="submit" class="bg-yellow text-black my-2 h-10 contact-input">
+        <button  class="bg-yellow text-black my-2 h-10 contact-input">
             SEND MESSAGE
         </button>
     </form>
