add whatsapp link to hire me icon

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                     TAILWIND, BOOTSTRAP,REACT JS,DJANGO,MYSQL
                 </h1>
                 <h1 class="text-right text-yellow hire-me">
-                    HIRE ME<i class="fa-solid fa-arrow-right-long text-yellow inline ml-2"></i>
+                    <a href="https://wa.me/+254769869064" class="text-yellow" >HIRE ME</a>
+                    <i class="fa-solid fa-arrow-right-long text-yellow inline ml-2"></a></i>
+                
                 </h1>
             </div>
         </div>
@@ -86,7 +88,8 @@
                 <h1 class="inline text-yellow text-sm">TOOLS:</h1>
                 <h1 class="inline ml-2 text-sm">ADOBE PHOTOSHOP, ADOBE XD</h1>
                 <h1 class="text-right text-yellow hire-me">
-                    HIRE ME<i class="fa-solid fa-arrow-right-long text-yellow inline ml-2"></i>
+                    <a href="https://wa.me/+254769869064" class="text-yellow" >HIRE ME</a>
+                    <i class="fa-solid fa-arrow-right-long text-yellow inline ml-2"></i>
                 </h1>
             </div>
         </div>
@@ -104,7 +107,8 @@
                     DJANGO(PYTHON)
                 </h1>
                 <h1 class="text-right text-yellow hire-me">
-                    HIRE ME<i class="fa-solid fa-arrow-right-long text-yellow inline ml-2"></i>
+                    <a href="https://wa.me/+254769869064" class="text-yellow" >HIRE ME</a>
+                    <i class="fa-solid fa-arrow-right-long text-yellow inline ml-2"></i>
                 </h1>
             </div>
         </div>
@@ -119,7 +123,8 @@
                 <h1 class="inline text-yellow text-sm">PLATFORMS:</h1>
                 <h1 class="inline ml-2 text-sm">MEDIUM, RESEARCH GATE</h1>
                 <h1 class="text-right text-yellow hire-me">
-                    HIRE ME<i class="fa-solid fa-arrow-right-long text-yellow inline ml-2"></i>
+                    <a href="https://wa.me/+254769869064" class="text-yellow" >HIRE ME</a>
+                    <i class="fa-solid fa-arrow-right-long text-yellow inline ml-2"></i>
                 </h1>
             </div>
         </div>
