add links to recent works section

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     A website I developed for a technical and vocational college that
                     was just starting up.
                 </p>
-                <p class="capitalize text-white text-sm pl-1">Visit website</p>
+                <a href="https://omugatvc.ac.ke" class="capitalize text-white text-sm pl-1">Visit website</a>
             </div>
             <div class="rounded bg-gray-500 h-auto w-1/2 overflow-clip ">
                 <img src="images/books.png" alt="omuga tvc website " class="w-full h-1/2 rounded-tr rounded-tl" />
@@ -156,9 +156,9 @@
                 <p class="text-gray-300 leading-none my-1 text-sm pl-1">
                     A book I wrote about advanced topics on CSS available on Gumroad.
                 </p>
-                <p class="capitalize text-white mt-4 text-sm pl-1">
+                <a href="pacheko.gumroad.com" class="capitalize text-white mt-4 text-sm pl-1">
                     Download it here
-                </p>
+                </a>
             </div>
         </div>
     </div>
