add footer links

--- a/index.html
+++ b/index.html
@@ -210,18 +210,18 @@
     <div class="flex flex-col items-center mt-5 ">
         <div class="flex flex-row justify-between space-x-2 ">
             <!-- here contains the social icons -->
-            <i class="fa-brands fa-github text-white"></i>
-            <i class="fa-brands fa-researchgate text-white"></i>
-            <i class="fa-brands fa-medium text-white"></i>
-            <i class="fa-brands fa-dribbble text-white"></i>
-            <i class="fa-brands fa-behance text-white"></i>
-            <i class="fa-brands fa-twitter text-white"></i>
-            <i class="fa-brands fa-facebook text-white"></i>
+            <a href="https://github.com/pacheko123"><i class="fa-brands fa-github text-white"></i></a>
+            <a href="https://www.researchgate.net/profile/Patrick-Oluoch-4"><i class="fa-brands fa-researchgate text-white"></i></a>
+            <a href="https://pacheko.medium.com"><i class="fa-brands fa-medium text-white"></i></a>
+            <a href="https://dribbble.com/pachekox"><i class="fa-brands fa-dribbble text-white"></i></a>
+            <a href="https://www.behance.net/pacheko"><i class="fa-brands fa-behance text-white"></i></a>
+            <a href="https://twitter.com/patrickoluochx"><i class="fa-brands fa-twitter text-white"></i></a>
+            <!-- <i class="fa-brands fa-facebook text-white"></i> -->
         </div>
         <div class="my-2">
-            <i class="fa-solid fa-phone text-gray-500 hover:text-white inline"></i>
+            <i class="fa-solid fa-phone text-gray-500 inline"></i>
             <h1 class="text-gray-500 hover:text-white text-lg inline">
-                +254769 869 064
+                <a href="+254769 869 064">+254769 869 064</a> 
             </h1>
         </div>
         <h1 class="text-lg text-gray-500">All Rights Reserved 2022</h1>
