add form submission

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </div>
 
     <!-- Start of contact me section -->
-    <form class="flex flex-col justify-start mx-2 p-2 contact-form" id="contact-form">
+    <form class="flex flex-col justify-start mx-2 p-2 contact-form" id="contact-form" action="https://formspree.io/f/moqrnzqd" method="post">
         <h1 class="text-yellow text-xl mt-5 font-medium category-heading">
             Contact Me
         </h1>
